--- a/index.css
+++ b/index.css
@@ -18,9 +18,45 @@ body {
     align-items: center;
 }
 
+.a {
+    position: fixed;
+    top: 0;
+    border-top: 50px solid green;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    height: 0;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.b {
+    position: absolute;
+    top: -50px;
+    border-top: 47px solid rgb(16, 16, 16);
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: none;
+    height: 0;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.b span {
+    position: absolute;
+    top: -45px;
+    font-size: larger;
+    color: rgb(202, 202, 202);
+    text-transform: uppercase;
+    font-weight: 600;
+    height: 50px;
+    background-color: transparent;
+}
+
 .background {
     background-image: url("bing_wallpaper_CenoteDiver_1920x1080.jpg");
-    opacity: 0.5;
+    opacity: 0.15;
     position: absolute;
     height: 100vh;
     width: 100vw;
